# qrusty

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: release.yml
assets/: qr_png64.txt
benchmarks/: jpg.exs  png.exs  svg.exs
lib/: qrusty.ex
lib/qrusty/: native.ex  qr.ex
native/qrusty/: Cargo.toml
native/qrusty/.cargo/: config
native/qrusty/src/: lib.rs
samples/: base64.html
test/: qrusty_test.exs
test/assets/: qr_jpg64.txt
test/qrusty/: native_test.exs  qr_test.exs
