[package]
name = "qrusty"
version = "0.1.5"
edition = "2021"

[lib]
name = "qrusty"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.24.0"
# Using fork of qrcode library while waiting for
# image v0.24 update PR to be merged (https://github.com/kennytm/qrcode-rust/pull/54)
qrcode = { git = "https://github.com/nbw/qrcode-rust"}
image = "0.24"
base64 = "0.13.0"
